[tool.poetry]
name = "gerenciabibliotecas"
version = "0.1.0"
description = "Gerenciamento de Bibliotecas do meu Projeto"
authors = ["Your Name <you@example.com>"]
license = "na"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-bcb = "^0.2.0"
shiny = "^0.9.0"
statsmodels = "^0.14.2"
plotnine = "^0.13.5"
pandas = "^2.2.2"
rsconnect-python = "^1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
